app/assets/stylesheets/application.css
/* ... */
button.monthly:hover {
    background-color: #57a89f;
}

button.completed {
    background-color: #b8b8b8;
}

.list-name {
    display: inline-block;
    font-size: 1em;
}


input.chore_weekly_click {
    width: 100%;
    background-color: #F9C563;
    color: white;
    padding: 14px 20px 14px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

input.chore_weekly_click:hover {
    background-color: #F9EC95;
}


input.chore_monthly_click {
    width: 100%;
    background-color: #247BA0;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

input.chore_monthly_click:hover {
    background-color: #86CAE8;
}

.lists-container {
    width: 40%;
}


input.edit_name {
    width: 50%;
    padding: 5px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    text-align: center;
    font-size: 1em;
}

input.edit_chore {
    width: 80%;
    padding: 5px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    text-align: center;
    font-size: 1em;
}

input.email_invite {
    width: 50%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    text-align: center;
    font-size: 15px;
}

input.edit_name_button {
    width: auto;
    background-color: #000000;
    color: white;
    padding: 5px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-align: center;
    font-size: 1em;
    white-space: normal;
}


input.edit_name_button:hover {
    background-color: #999999;
}

input.cancel_account {
    width: 70%;
    background-color: red;
    color: white;
    padding: 5px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-align: center;
    font-size: 1em;
    white-space: normal;
}



.facebook {
    width: 100%;
    background-color: #4C69BA;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    text-decoration: none;
}

.facebook:hover {
    background-color: #5B7BD5;
}

.nav-bar {
    visibility: hidden;
    display: none;
}


.title {
    padding: 0px;
    text-align: left;
}

.edit-chore {
    max-width: 80%
}



/*-----------New Layout CSS ------------*/

.bottom-line {
    border-bottom: rgb(185, 185, 185) 1px solid;
}

@media screen and (max-width: 768px) {

    .minicolumn {
        width: 100%;

    } 

    .lists-container {
        width: 80%;
    }



    input.chore_daily {
        font-size: 10px;
    }

    img.logo {
        width: 35px;
        height: 35px;
      }

    .fixed-sidebar {
        position: fixed;
        width: 100%;
        height: 30px;
        padding: 0px;
        margin: 0px;
        z-index: 1000;
    }

    .chore-container {
        margin-top: 25px;
        margin-left: 0;
        width: 100%;
    }


    .right-bar {
        visibility: visible;
        display: block;
        float: right;
        margin-right: 2px;
    }

    .right-bar-daily {
        vertical-align: bottom;
        display: inline-block;
        color: rgb(69, 193, 209);
    }

    .right-bar-weekly {
        display: inline-block;
        color: #57BC90;
    }

    .right-bar-monthly {
        display: inline-block;
        color: #015249;
    }



    button.chore {
        padding: 5px;
        font-size: 1em;
    }

    .list-name {
        font-size: 1em;
    }

    .dropbtn {
        font-size: 1em;
    }

    .users-bar {
        visibility: hidden;
        display: none;
    }
    .edit-bar {
        visibility: hidden;
        display: none;
    }

    .edit-chore {
        max-width: 90%
    }



    .nav-bar {
        visibility: visible;
        display: block;
    }

    .title {
        visibility: hidden;
        display: none;
    }

    img.photo {
        width: 20px;
        height: 20px;
        vertical-align: bottom;
      }
    
  
}

@media screen and (max-width: 340px) {

    img.list_icon {
        height: 30px;
      }

      h1 {
        font-size: 1.25em;
      }

      input.edit_name {
        width: 100%;
    }

}

